# pybind11-python-yolov5

./: CMakeLists.txt  README.md  makefile  test.txt  test_yolo_imgpath.py  test_yolo_pybind11.py  test_yolo_win.py
src/: detector.cpp  main.cpp  utils.cpp
src_ori/: detector.cpp  main.cpp
test/: CMakeLists.txt  example.cpp  makefile  test_pybind11.py
